[tool.poetry]
name = "PyMISPObjectTemplates"
version = "0.1.0"
description = "Python API to create and update MISP Object templates"
authors = ["Raphaël Vinot <raphael.vinot@circl.lu>"]

[tool.poetry.dependencies]
python = "^3.6"
jsonschema = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.770"
nose = "^1.3.7"
coverage = "^5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
